field-forms/objects/Linked_Form__c/Linked_Form__c.object-meta.xml
<CustomObject>
    <label>Linked Form</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Linked Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>