field-forms/objects/Linked_Form__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The location/site this inspection was performed at. Used to group prior visits at the same location for real-time coaching and anomaly detection. Populated from the parent Work Order / Service Appointment when available.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Linked Forms</relationshipLabel>
    <relationshipName>Linked_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>