field-forms/objects/Linked_Form__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <description>When the inspection moved to Completed (stamped by LinkedFormTrigger). LastModifiedDate drifts with every later touch (PDF generation, alerts, edits) — this is the durable completion timestamp for analytics.</description>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>