field-forms/objects/Linked_Form__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The inspector who completed the inspection (stamped by LinkedFormTrigger at the Completed transition). The analytics inspector dimension — audit fields drift with later automation touches.</description>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Completed Inspections</relationshipLabel>
    <relationshipName>Completed_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>