field-forms/objects/Linked_Form__c/fields/Current_Page__c.field-meta.xml
<CustomField>
    <fullName>Current_Page__c</fullName>
    <label>Current Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>