field-forms/objects/Linked_Form__c/fields/Fill_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Fill_Duration_Minutes__c</fullName>
    <description>Minutes from Started_At to Completed_At, stamped at completion. A plain number (not a formula) so Tableau aggregates it without datetime math, and so a backfill can populate historical rows.</description>
    <label>Fill Duration (Minutes)</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>