field-forms/objects/Linked_Form__c/fields/Findings_Blocking_Count__c.field-meta.xml
<CustomField>
    <fullName>Findings_Blocking_Count__c</fullName>
    <description>Count of Form_Finding__c child records on this Linked_Form whose Blocks_Submission__c formula evaluates true (photo required, no photo attached, status Open). Renderer's submit guard hard-blocks the Submit button while this is &gt; 0. Maintained alongside Findings_Open_Count__c by the scoring trigger / rollup queueable.</description>
    <label>Findings Blocking Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>