field-forms/objects/Linked_Form__c/fields/Findings_Open_Count__c.field-meta.xml
<CustomField>
    <fullName>Findings_Open_Count__c</fullName>
    <description>Count of Form_Finding__c child records on this Linked_Form whose Status__c is Open or In Progress. Recalculated by FormAnswerScoringTrigger / NeuraFormScoringRollupQueueable each time an answer changes — denormalized rather than roll-up summary so the trigger can update it in the same DML pass as Score__c.</description>
    <label>Findings Open Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>