field-forms/objects/Linked_Form__c/fields/Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Form_Template__c</fullName>
    <label>Form Template</label>
    <referenceTo>Form_Template__c</referenceTo>
    <relationshipLabel>Linked Forms</relationshipLabel>
    <relationshipName>Linked_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>