field-forms/objects/Linked_Form__c/fields/Inspector_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Tenure_Months__c</fullName>
    <description>Tenure (in months) of the inspector at the time this inspection was completed. Populated externally (data load / integration) for Ops dashboard reporting by tenure — nothing in the package stamps it, as there is no tenure source field on the user record.</description>
    <label>Inspector Tenure (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>