field-forms/objects/Linked_Form__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <description>Snapshot of Form_Template__c.Max_Score__c at the time this Linked_Form was created (or first scored). Pinned to the template's max-at-evaluation so historical responses survive later re-weighting of the template. Linked_Form__c.Score_Percent__c uses this as the denominator.</description>
    <label>Max Score</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>