field-forms/objects/Linked_Form__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <description>True when Score_Percent__c meets or exceeds Form_Template__r.Pass_Threshold_Percent__c. Null Pass_Threshold_Percent__c (the template doesn't define a threshold) yields false — the response is "scored but no overall pass/fail concept applies." Renderer reads this for the review-screen banner.</description>
    <formula>IF( ISBLANK(Form_Template__r.Pass_Threshold_Percent__c), FALSE, Score_Percent__c &gt;= Form_Template__r.Pass_Threshold_Percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passed</label>
    <type>Checkbox</type>
</CustomField>