field-forms/objects/Linked_Form__c/fields/Re_Roll__c.field-meta.xml
<CustomField>
    <fullName>Re_Roll__c</fullName>
    <description>True when this inspection required a follow-up truck roll (a quality miss that had to be re-serviced). Drives the re-roll rate by location metric on the Ops dashboard.</description>
    <defaultValue>false</defaultValue>
    <label>Re-Roll</label>
    <type>Checkbox</type>
</CustomField>