field-forms/objects/Linked_Form__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Sum of Form_Answer__c.Points_Earned__c across all answers for this response. Maintained by FormAnswerScoringTrigger / NeuraFormScoringRollupQueueable. Null until the first evaluable answer is saved (treat as "not yet scored").</description>
    <label>Score</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>