field-forms/objects/Linked_Form__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Linked Forms</relationshipLabel>
    <relationshipName>Linked_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>