field-forms/objects/Linked_Form__c/fields/Service_Summary__c.field-meta.xml
<CustomField>
    <fullName>Service_Summary__c</fullName>
    <label>Service Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>