field-forms/objects/Linked_Form__c/fields/Signature_Captured_At__c.field-meta.xml
<CustomField>
    <fullName>Signature_Captured_At__c</fullName>
    <description>Timestamp the on-site signature was captured. Part of the audit trail.</description>
    <label>Signature Captured At</label>
    <type>DateTime</type>
</CustomField>