field-forms/objects/Linked_Form__c/fields/Signature_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Signature_Latitude__c</fullName>
    <description>Latitude where the report was signed (device geolocation). Audit trail.</description>
    <label>Signature Latitude</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>