field-forms/objects/Linked_Form__c/fields/Signature_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Signature_Longitude__c</fullName>
    <description>Longitude where the report was signed (device geolocation). Audit trail.</description>
    <label>Signature Longitude</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>