field-forms/objects/Linked_Form__c/fields/Signed_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Name__c</fullName>
    <description>Name of the person who signed the report on-site (e.g. the store manager). Part of the signed-report audit trail. (Vignette 4)</description>
    <label>Signed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>