field-forms/objects/Linked_Form__c/fields/Started_At__c.field-meta.xml
<CustomField>
    <fullName>Started_At__c</fullName>
    <description>When the inspection moved to In Progress (first stamped by LinkedFormTrigger). With Completed_At__c, powers fill-duration analytics — the ops metric for workload planning and the pencil-whip signal for inspection QC.</description>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>