field-forms/objects/Linked_Form__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <description>The date the inspection visit occurred. Drives chronological ordering of prior visits at a location (for coaching/anomaly history) and the time axis of the Ops ramp-curve dashboard.</description>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>