field-forms/objects/Linked_Form__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Linked Forms</relationshipLabel>
    <relationshipName>Linked_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>