field-forms/objects/Linked_Form__c/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Linked Forms</relationshipLabel>
    <relationshipName>Linked_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>