field-forms/objects/Linked_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>Work_Order_Line_Item__c</columns>
    <columns>Service_Appointment__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>